# hello_graphics

./: .gitignore  CMakeLists.txt  LICENSE  README.md
interactive_computer_graphics/: CMakeLists.txt
interactive_computer_graphics/app/: 01_hello_ogl.c  02_transformations.c  CMakeLists.txt
interactive_computer_graphics/include/: linmath.h
interactive_computer_graphics/include/icg/: glad.h  glfw.h  glsl.h
interactive_computer_graphics/lib/: CMakeLists.txt
interactive_computer_graphics/lib/glad/: CMakeLists.txt
interactive_computer_graphics/lib/glfw/: CMakeLists.txt  glfw.c
interactive_computer_graphics/lib/shader/: CMakeLists.txt  glsl.c  prj_02.vert  simple.vert
interactive_computer_graphics/lib/wavefront_obj/: CMakeLists.txt  wavefront_obj.c  wavefront_obj.h
